# egui-blog

./: .gitignore  .rust-analyzer.toml  AGENTS.md  ANIMATION_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  color_contrast_analysis.md  keyboard_shortcuts_analysis.md  keyboard_shortcuts_table.md  test_macro  test_task6_requirements.py
.cargo/: config.toml
crates/blog_app/: .rust-analyzer.toml  Cargo.toml  IMPLEMENTATION_PLAN.md  README_DEV.md  ROADMAP.md  TAG_SYSTEM.md  TODO.md  URL_ROUTING.md  build.rs  print_colors.rs  shortcuts.toml  test_catppuccin.rs
crates/blog_app/docs/: MATH_BASELINE_PLAN.md  MATH_BASELINE_PROGRESS.md  MATH_BASELINE_SUMMARY.md
crates/blog_app/docs/plans/: 2026-02-16-watch-blog-design.md  2026-02-16-watch-blog-implementation.md  2026-02-18-missing-posts-handling-design.md  2026-02-18-missing-posts-handling-implementation.md
crates/blog_app/notes/: 2026-02-28-meeting-notes.md  2026-03-01-research-ideas.md
crates/blog_app/posts/: 2026-02-10-welcome.md  2026-02-11-learning-egui.md  2026-02-12-future-plans.md  2026-02-25-test-latex.md  2026-02-25-test-table-no-headers.md  2026-02-25-test-valid-table.md  2026-03-03-memory-limitation-of-llm.md  test_blockquote_alignment.md  test_math_alignment.md  test_paragraph_spacing.md  test_spacing_collapse.md
crates/blog_app/reviews/: 2026-02-20-rust-programming-language-review.md  2026-02-25-deep-learning-book-review.md
crates/blog_app/src/: lib.rs  main.rs  routing.rs  web.rs
crates/blog_app/src/animation/: config.rs  mod.rs  renderer.rs  state.rs
crates/blog_app/src/debug_windows/: mod.rs
crates/blog_app/src/math/: assets.rs  embedded.rs  embedded.rs.generated  mod.rs
crates/blog_app/src/posts/: loader.rs  mod.rs  state.rs
crates/blog_app/src/routing/: router.rs
crates/blog_app/src/shortcuts/: actions.rs  config.rs  context.rs  help.rs  integration.rs  loader.rs  manager.rs  mod.rs  sequences.rs
crates/blog_app/src/ui/: components.rs  layout.rs  markdown.rs  mod.rs  responsive.rs  table_renderer.rs
crates/blog_app/tests/: crisp_svg_test.rs  image_source_creation.rs  math_rendering.rs  missing_posts.rs  performance_benchmarks.rs  shortcuts_test.rs  svg_loading.rs  svg_size_extraction.rs  typst_fill_test.rs
crates/blog_macros/: Cargo.toml  README.md
crates/blog_macros/src/: lib.rs  utils.rs
scripts/: build_blog_web.sh  setup_web.sh  start_server_blog.sh  watch_blog.sh
web_blog/: blog_app.js
web_blog/dev/: blog_app.js  index.html
web_blog/release/: blog_app.js
