[package]
name = "blog_app"
version.workspace = true
authors = ["You <your@email.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
default-run = "blog_app"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wgpu"]

web_app = []

glow = ["eframe/glow"]
wgpu = ["eframe/wgpu", "bytemuck", "dep:wgpu"]

# Development feature for file watching
dev = ["notify"]

[dependencies]
eframe = { workspace = true, default-features = false, features = ["web_screen_reader"] }
egui = { workspace = true, features = ["default"] }
log.workspace = true

# Markdown and YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
thiserror = "1.0"

# Syntax highlighting
egui_extras = { workspace = true, default-features = false, features = ["syntect"] }

# File watching (development only)
notify = { version = "6.1", optional = true }

# Optional dependencies:
bytemuck = { workspace = true, optional = true }
wgpu = { workspace = true, features = ["default", "webgpu", "webgl"], optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true, features = ["auto-color", "humantime"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
egui_kittest = { workspace = true, features = ["eframe", "snapshot", "wgpu"] }