[package]
name = "blog_app"
version.workspace = true
authors = ["You <your@email.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
default-run = "blog_web_server"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wgpu", "persistence"]

web_app = []

glow = ["eframe/glow"]
wgpu = ["eframe/wgpu", "bytemuck", "dep:wgpu"]

# Development feature for file watching
dev = ["notify"]

# Persistence for saving app state across sessions
persistence = ["eframe/persistence", "serde"]

[dependencies]
eframe = { workspace = true, default-features = false, features = ["web_screen_reader", "wayland", "x11"] }
egui = { workspace = true, features = ["default"] }
log.workspace = true
clap = { version = "4.5", features = ["derive"] }

# Markdown and YAML parsing
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
thiserror = "1.0"

# Math rendering
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.10"

# Syntax highlighting and image loading
egui_extras = { workspace = true, default-features = false, features = ["syntect", "svg"] }

# File watching (development only)
notify = { version = "6.1", optional = true }

# Optional dependencies:
bytemuck = { workspace = true, optional = true }
wgpu = { workspace = true, features = ["default", "webgpu", "webgl"], optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true, features = ["auto-color", "humantime"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
egui_kittest = { workspace = true, features = ["eframe", "snapshot", "wgpu"] }
tempfile = "3.10"

# Native desktop application
[[bin]]
name = "blog_native"
path = "src/bin/blog_native.rs"

# Development and production web server
[[bin]]
name = "blog_web_server"
path = "src/bin/blog_web_server.rs"
required-features = ["dev"]

# Build dependencies for math processing
[build-dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
walkdir = "2.5"
regex = "1.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.19"